--- a/projects/elastic/index.html
+++ b/projects/elastic/index.html
@@ -111,6 +111,7 @@
               <li>
                 <a class="dropdown-item" href="/propeller">Propeller</a>
               </li>
+              <li><a class="dropdown-item" href="/mproxy">mProxy</a></li>
               <li>
                 <hr class="dropdown-divider" />
               </li>
