--- a/supermq/index.html
+++ b/supermq/index.html
@@ -111,6 +111,7 @@
               <li><a class="dropdown-item" target="_blank" href="https://magistrala.absmach.eu">Magistrala</a></li>
               <li><a class="dropdown-item" href="javascript:void(0)">SuperMQ</a></li>
               <li><a class="dropdown-item" href="/propeller">Propeller</a></li>
+              <li><a class="dropdown-item" href="/mproxy">mProxy</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
