--- a/amdm/index.html
+++ b/amdm/index.html
@@ -92,6 +92,7 @@
               <li>
                 <a class="dropdown-item" href="/propeller">Propeller</a>
               </li>
+              <li><a class="dropdown-item" href="/mproxy">mProxy</a></li>
               <li><a class="dropdown-item" href="/rex">Rex</a></li>
               <li>
                 <hr class="dropdown-divider" />
