--- a/imprint/index.html
+++ b/imprint/index.html
@@ -77,6 +77,7 @@
                                     href="https://magistrala.absmach.eu">Magistrala</a></li>
                             <li><a class="dropdown-item" href="/supermq">SuperMQ</a></li>
                             <li><a class="dropdown-item" href="/propeller">Propeller</a></li>
+                            <li><a class="dropdown-item" href="/mproxy">mProxy</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
