--- a/products/index.html
+++ b/products/index.html
@@ -251,6 +251,31 @@
           </div>
         </div>
 
+        <!-- mProxy Card -->
+        <div class="col-lg-6 col-xl-6">
+          <div class="card h-100 shadow-sm">
+            <div class="card-img-top" style="
+              background:
+              radial-gradient(circle, #a29bfe 10%, transparent 11%),
+              radial-gradient(circle, #81ecec 10%, transparent 11%) 3em 3em,
+              radial-gradient(circle, #ffeaa7 10%, transparent 11%) 1.5em 1.5em;
+              background-size: 3em 3em;
+              background-color: #dfe6e9;
+              min-height: 150px;
+              ">
+            </div>
+
+            <div class="card-body">
+              <h3 class="card-title">mProxy – Multi-Protocol IoT Gateway</h3>
+              <p class="card-text">mProxy is a lightweight, scalable API gateway designed for the IoT edge. It enables
+                seamless communication across MQTT, CoAP, HTTP, and WebSocket with real-time packet manipulation,
+                pluggable authentication, and deep observability. Deploy it as a sidecar or standalone service.</p>
+              <a href="/mproxy" class="btn btn-purple btn-lg btn-block mt-3 w-100"
+                style="background-color: #5a4ae3; color: white;">Go to mProxy</a>
+            </div>
+          </div>
+        </div>
+
         <!-- Hardware Section -->
         <div class="col-12">
           <h2 class="text-center">Hardware</h2>
