--- a/projects/index.html
+++ b/projects/index.html
@@ -106,6 +106,7 @@
               <li><a class="dropdown-item" target="_blank" href="https://magistrala.absmach.eu">Magistrala</a></li>
               <li><a class="dropdown-item" href="/supermq">SuperMQ</a></li>
               <li><a class="dropdown-item" href="/propeller">Propeller</a></li>
+              <li><a class="dropdown-item" href="/mproxy">mProxy</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
