--- a/rex/index.html
+++ b/rex/index.html
@@ -82,6 +82,7 @@
               <li><a class="dropdown-item" target="_blank" href="https://magistrala.absmach.eu">Magistrala</a></li>
               <li><a class="dropdown-item" href="/supermq">SuperMQ</a></li>
               <li><a class="dropdown-item" href="/propeller">Propeller</a></li>
+              <li><a class="dropdown-item" href="/mproxy">mProxy</a></li>
               <li><a class="dropdown-item" href="javascript:void(0)">Rex</a></li>
               <li>
                 <hr class="dropdown-divider">
