--- a/mproxy/index.html
+++ b/mproxy/index.html
@@ -11,7 +11,7 @@
   <!-- Primary Metadata -->
   <meta name="title" content="mProxy — Multi-Protocol IoT Gateway | Abstract Machines" />
   <meta name="description"
-    content="mProxy is a lightweight, scalable IoT API gateway. Support seamless communication across MQTT, CoAP, HTTP, and WebSocket with real-time packet manipulation and pluggable auth." />
+    content="Unlock seamless IoT connectivity with mProxy. A high-performance gateway for MQTT & CoAP featuring real-time payload transformation and fine-grained access control." />
   <meta name="keywords"
     content="mProxy, IoT Gateway, API Gateway, MQTT, CoAP, HTTP, WebSocket, Packet Manipulation, Observability" />
   <meta name="author" content="Abstract Machines" />
@@ -25,7 +25,7 @@
   <meta property="og:url" content="https://www.absmach.eu/mproxy" />
   <meta property="og:title" content="mProxy — Multi-Protocol IoT Gateway" />
   <meta property="og:description"
-    content="mProxy is a lightweight, scalable IoT API gateway. Support seamless communication across MQTT, CoAP, HTTP, and WebSocket with real-time packet manipulation and pluggable auth." />
+    content="Unlock seamless IoT connectivity with mProxy. A high-performance gateway for MQTT & CoAP featuring real-time payload transformation and fine-grained access control." />
   <meta property="og:image" content="https://www.absmach.eu/img/logos/social-preview.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -36,7 +36,7 @@
   <meta name="twitter:site" content="@absmach" />
   <meta name="twitter:title" content="mProxy — Multi-Protocol IoT Gateway" />
   <meta name="twitter:description"
-    content="mProxy is a lightweight, scalable IoT API gateway. Support seamless communication across MQTT, CoAP, HTTP, and WebSocket with real-time packet manipulation and pluggable auth." />
+    content="Unlock seamless IoT connectivity with mProxy. A high-performance gateway for MQTT & CoAP featuring real-time payload transformation and fine-grained access control." />
   <meta name="twitter:image" content="https://www.absmach.eu/img/logos/social-preview.png" />
   <meta name="twitter:image" content="https://www.absmach.eu/img/logos/social-preview.png" />
   <meta name="twitter:image:alt" content="mproxy - WebAssembly Orchestrator by Abstract Machines" />
@@ -132,8 +132,8 @@
           <div class="mt-4">
             <a href="https://github.com/absmach/mproxy" class="btn btn-warning d-inline-block mb-2"
               target="_blank">Download mProxy</a>
-            <a href="https://github.com/absmach/mproxy" class="btn btn-dark d-inline-block mb-2" target="_blank">Read
-              the Docs &gt;</a>
+            <a href="https://github.com/absmach/mproxy#readme" class="btn btn-dark d-inline-block mb-2" target="_blank">Read
+              the Docs </a>
           </div>
         </div>
         <div class="col-md-6 mt-5">
@@ -219,7 +219,7 @@
             </div>
             <div class="col-9">
               <h5 class="text-left mb-3">Observability</h5>
-              <p class="text-left">Real-time metrics, logging, and tracing. Integrates easily with Prometheus, Grafana,
+              <p class="text-left">Real-time metrics, logging, and tracing. Integrates easily with Prometheus,
                 and OpenTelemetry for troubleshooting.</p>
             </div>
           </div>
