--- a/mproxy/index.html
+++ b/mproxy/index.html
@@ -150,7 +150,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 d-flex align-items-center justify-content-center">
-          <img src="../img/mgate-features.png" alt="mProxy Concept" class="img-fluid">
+          <img src="../img/mproxy-features.jpeg" alt="mProxy Concept" class="img-fluid">
         </div>
         <div class="col-md-6 mt-5">
           <h1>What is mProxy</h1>
