update mproxy images
Signed-off-by: wambui-pixel <kiokowambui015@gmail.com>

update mproxy features

Signed-off-by: wambui-pixel <kiokowambui015@gmail.com>

--- a/mproxy/index.html
+++ b/mproxy/index.html
@@ -150,7 +150,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 d-flex align-items-center justify-content-center">
-          <img src="../img/mproxy-features.jpeg" alt="mProxy Concept" class="img-fluid">
+          <img src="../img/mproxy-features.png" alt="mProxy Concept" class="img-fluid">
         </div>
         <div class="col-md-6 mt-5">
           <h1>What is mProxy</h1>
@@ -334,8 +334,8 @@
         <!-- Contact us -->
         <div class="col mb-4 text-center text-md-start">
           <h5>Contact Us</h5>
-          <p><i class="fas fa-envelope me-2"></i><a href="mailto:info@abstractmachines.fr"
-              class="text-white">info@abstractmachines.fr</a></p>
+          <p><i class="fas fa-envelope me-2"></i><a href="mailto:info@absmach.eu"
+              class="text-white">info@absmach.eu</a></p>
           <p><img src="/img/logos/matrix-logo-white.svg" height="28" width="60" alt="Matrix Logo" class="me-2">
             <a href="https://matrix.to/#/#absmach:matrix.org" class="text-white" target="_blank">Chat on Matrix</a>
           </p>
